# cnbiros_wheelchair

./: CMakeLists.txt  package.xml
examples/: example_dxgpsb.cpp  example_encoder_pair.cpp  example_encoder_single.cpp  example_encoders.cpp  example_odometry.cpp  example_sonars.cpp  example_sonars_setaddress.cpp
extra/: ros_velocity_profiles.m
extra/wheelchair_velocity_profiles/profile1/visual_odometry/: wheelchair.velocity.angular.anticlockwise.profile1.joystick.5.bag  wheelchair.velocity.angular.clockwise.profile1.command.2.bag  wheelchair.velocity.angular.clockwise.profile1.joystick.3.bag  wheelchair.velocity.angular.clockwise.profile1.joystick.6.bag  wheelchair.velocity.linear.backward.profile1.command.3.bag  wheelchair.velocity.linear.backward.profile1.command.6.bag  wheelchair.velocity.linear.backward.profile1.joystick.5.bag  wheelchair.velocity.linear.forward.profile1.command.2.bag  wheelchair.velocity.profile1.angular.clockwise.command.4.bag  wheelchair.velocity.profile1.angular.clockwise.command.5.bag  wheelchair.velocity.profile1.angular.clockwise.command.6.bag  wheelchair.velocity.profile1.angular.clockwise.joystick.1.bag  wheelchair.velocity.profile1.angular.counterclockwise.command.2.bag  wheelchair.velocity.profile1.angular.counterclockwise.command.4.bag  wheelchair.velocity.profile1.angular.counterclockwise.joystick.3.bag  wheelchair.velocity.profile1.angular.counterclockwise.joystick.6.bag  wheelchair.velocity.profile1.linear.backward.command.1.bag  wheelchair.velocity.profile1.linear.backward.command.5.bag  wheelchair.velocity.profile1.linear.forward.command.5.bag  wheelchair.velocity.profile1.linear.forward.joystick.2.bag  wheelchair.velocity.profile1.linear.forward.joystick.3.bag  wheelchair.velocity.profile1.linear.forward.joystick.6.bag
extra/wheelchair_velocity_profiles/profile1/visual_odometry/01_trial/: wheelchair.velocity.profile1.angular.clockwise.command.01.bag  wheelchair.velocity.profile1.angular.clockwise.command.02.bag  wheelchair.velocity.profile1.angular.clockwise.command.03.bag  wheelchair.velocity.profile1.angular.clockwise.command.04.bag  wheelchair.velocity.profile1.angular.clockwise.command.05.bag  wheelchair.velocity.profile1.angular.clockwise.command.06.bag  wheelchair.velocity.profile1.angular.clockwise.command.07.bag  wheelchair.velocity.profile1.angular.clockwise.command.08.bag  wheelchair.velocity.profile1.angular.clockwise.command.09.bag  wheelchair.velocity.profile1.angular.clockwise.command.10.bag  wheelchair.velocity.profile1.angular.clockwise.command.11.bag  wheelchair.velocity.profile1.angular.clockwise.command.12.bag  wheelchair.velocity.profile1.angular.counterclockwise.command.01.bag  wheelchair.velocity.profile1.angular.counterclockwise.command.02.bag  wheelchair.velocity.profile1.angular.counterclockwise.command.03.bag  wheelchair.velocity.profile1.angular.counterclockwise.command.04.bag  wheelchair.velocity.profile1.angular.counterclockwise.command.05.bag  wheelchair.velocity.profile1.angular.counterclockwise.command.06.bag  wheelchair.velocity.profile1.angular.counterclockwise.command.07.bag  wheelchair.velocity.profile1.angular.counterclockwise.command.08.bag  wheelchair.velocity.profile1.angular.counterclockwise.command.09.bag  wheelchair.velocity.profile1.angular.counterclockwise.command.10.bag  wheelchair.velocity.profile1.angular.counterclockwise.command.11.bag  wheelchair.velocity.profile1.angular.counterclockwise.command.12.bag  wheelchair.velocity.profile1.linear.backward.command.01.bag  wheelchair.velocity.profile1.linear.backward.command.02.bag  wheelchair.velocity.profile1.linear.backward.command.03.bag  wheelchair.velocity.profile1.linear.backward.command.04.bag  wheelchair.velocity.profile1.linear.backward.command.05.bag  wheelchair.velocity.profile1.linear.backward.command.06.bag  wheelchair.velocity.profile1.linear.backward.command.07.bag  wheelchair.velocity.profile1.linear.backward.command.08.bag  wheelchair.velocity.profile1.linear.backward.command.09.bag  wheelchair.velocity.profile1.linear.backward.command.10.bag  wheelchair.velocity.profile1.linear.backward.command.11.bag  (+13 more)
include/cnbiros_wheelchair/: CNBIOdometryThread.h  DXGPSB.hpp  DXGPSBThread.hpp  Dxgpsb.hpp  DxgpsbThread.hpp  DxgspbThread.hpp  Encoder.hpp  EncoderThread.hpp  Motors.hpp  Odometry.hpp  OdometryThread.hpp  Sonar.hpp  SonarThread.hpp  UltraSonics.hpp  UltraSonicsToPointCloud.hpp
launch/: base_local_planner_params.yaml  costmap_2d.launch  costmap_2d.yaml  global_costmap_params.yaml  local_costmap_params.yaml  ros_kinect_to_laserscan.launch  ros_wheelchair.launch  ros_wheelchair_bringup.launch  ros_wheelchair_costmap.launch  ros_wheelchair_costmap.yaml  ros_wheelchair_costmap_rviz.launch  ros_wheelchair_minimal_bringup.launch  ros_wheelchair_motors.launch  ros_wheelchair_navigation.launch  ros_wheelchair_odometry.launch  ros_wheelchair_rviz.launch  ros_wheelchair_simulation.launch  ros_wheelchair_simulation_costmap.launch  ros_wheelchair_ultrasonics.launch  ros_wheelchair_ultrasonics_filters.yaml  ros_wheelchair_ultrasonics_left.yaml  ros_wheelchair_ultrasonics_right.yaml  ros_wheelchair_ultrasonics_set.launch  ros_wheelchair_ultrasonics_to_pointcloud.launch  ros_wheelchair_velocity_profile.launch
launch/old/: recovery_behaviour_params.yaml  ros_wheelchair_ultrasonics_set.launch
model/: wheelchair.urdf
params/: ros_wheelchair_ultrasonics_to_pointcloud.yaml
rviz/: .ros_wheelchair.rviz.swp  ros_wheelchair.rviz  ros_wheelchair_costmap.rviz
src/: CNBIOdometryThread.cpp  DXGPSB.cpp  DXGPSBThread.cpp  Dxgpsb.cpp  DxgpsbThread.cpp  Encoder.cpp  EncoderThread.cpp  Motors.cpp  Odometry.cpp  OdometryThread.cpp  Sonar.cpp  SonarThread.cpp  UltraSonics.cpp  UltraSonicsToPointCloud.cpp  ros_wheelchair_motors.cpp  ros_wheelchair_odometry.cpp  ros_wheelchair_ultrasonics.cpp  ros_wheelchair_ultrasonics_to_pointcloud.cpp
srv/: GetVelocity.srv  SetVelocity.srv
udev-setup/: 99-usb-serial-controller.rules  99-usb-serial-encoders.rules  99-usb-serial-hokuyo.rules  99-usb-serial-sonars.rules  set_usb-serial_rules.sh
(+26 files in other folders)
