<?xml version="1.0"?>
<package format="2">
  <name>cnbiros_wheelchair</name>
  <version>0.0.1</version>
  <description>CNBIROS Wheelchair library</description>
  <author email="luca.tonin@epfl.ch">Luca Tonin</author>
  <maintainer email="luca.tonin@epfl.ch">Luca Tonin</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>
  <build_depend>cmake_modules</build_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>tf</exec_depend>

  <build_depend>cnbiros_core</build_depend>
  <exec_depend>cnbiros_core</exec_depend>

  <exec_depend>cnbiros_wheelchair_description</exec_depend>
  <exec_depend>cnbiros_wheelchair_gazebo</exec_depend>

  <exec_depend>urg_node</exec_depend>
  <exec_depend>hokuyo3d</exec_depend>
  
</package>
